force-app/main/default/objects/CQ_GJ_SQX_Parent_Object__c/CQ_GJ_SQX_Parent_Object__c.object-meta.xml
<CustomObject>
    <description>It will stores the info about the child&apos;s parent.</description>
    <label>CQ GJ Parent Object</label>
    <nameField>
        <label>Parent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CQ GJ Parent Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>