force-app/main/default/objects/CQ_GJ_SQX_Parent_Object__c/fields/CQ_GJ_Buisness_Title__c.field-meta.xml
<CustomField>
    <fullName>CQ_GJ_Buisness_Title__c</fullName>
    <description>stores the name of the organization</description>
    <label>Buisness Title</label>
    <length>90</length>
    <type>Text</type>
</CustomField>