force-app/main/default/objects/CQ_GJ_SQX_Parent_Object__c/fields/CQ_GJ_Description__c.field-meta.xml
<CustomField>
    <fullName>CQ_GJ_Description__c</fullName>
    <description>stores the info about the occupation</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>