force-app/main/default/objects/CQ_GJ_SQX_Parent_Object__c/fields/CQ_GJ_Designation__c.field-meta.xml
<CustomField>
    <fullName>CQ_GJ_Designation__c</fullName>
    <description>Will take the info of the designation of the parents</description>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Businessman</fullName>
            </value>
            <value>
                <fullName>Corporate Worker</fullName>
            </value>
            <value>
                <fullName>Daily Worker</fullName>
            </value>
            <value>
                <fullName>Government Officer</fullName>
            </value>
            <value>
                <fullName>Self Employed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>