force-app/main/default/objects/CQ_GJ_SQX_Parent_Object__c/fields/CQ_GJ_Initiated_Date__c.field-meta.xml
<CustomField>
    <fullName>CQ_GJ_Initiated_Date__c</fullName>
    <description>store the initiated date</description>
    <label>Initiated Date</label>
    <type>Date</type>
</CustomField>