force-app/main/default/objects/CQ_GJ_SQX_Parent_Object__c/fields/CQ_GJ_Parent_Query__c.field-meta.xml
<CustomField>
    <fullName>CQ_GJ_Parent_Query__c</fullName>
    <label>Parent Query</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>