force-app/main/default/objects/CQ_GJ_SQX_Parent_Object__c/fields/CQ_GJ_SQX_Account_Info__c.field-meta.xml
<CustomField>
    <fullName>CQ_GJ_SQX_Account_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Info</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CQ GJ Parent Objects</relationshipLabel>
    <relationshipName>CQ_GJ_Parent_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>