force-app/main/default/objects/CQ_GJ_SQX_Parent_Object__c/fields/CQ_GJ_SQX_Part_Info__c.field-meta.xml
<CustomField>
    <fullName>CQ_GJ_SQX_Part_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to part  and stores the info of part object</description>
    <label>Part Info</label>
    <referenceTo>compliancequest__SQX_Part__c</referenceTo>
    <relationshipLabel>CQ GJ Parent Objects</relationshipLabel>
    <relationshipName>CQ_GJ_Parent_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>