force-app/main/default/objects/CQ_GJ_SQX_Parent_Object__c/fields/CQ_GJ_SQX_User__c.field-meta.xml
<CustomField>
    <fullName>CQ_GJ_SQX_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>will store the name of the account Owner and it is a lookup to user</description>
    <label>User Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CQ_GJ_Parent_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>