force-app/main/default/objects/CQ_GJ_SQX_Parent_Object__c/fields/CQ_GJ_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>CQ_GJ_Target_Date__c</fullName>
    <description>stores the target date info</description>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>