force-app/main/default/objects/CQ_GJ_SQX_Parent_Object__c/fields/CQ_GJ_Upload_Certificate__c.field-meta.xml
<CustomField>
    <fullName>CQ_GJ_Upload_Certificate__c</fullName>
    <description>Will store the certificate of the parent</description>
    <label>Upload Certificate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>