force-app/main/default/objects/CQ_GJ_SQX_Parent_Object__c/fields/CQ_GJ_Working_Days__c.field-meta.xml
<CustomField>
    <fullName>CQ_GJ_Working_Days__c</fullName>
    <description>stores the info of parent&apos;s working days</description>
    <label>Working Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>