force-app/main/default/objects/CQ_GJ_SQX_Parent_Object__c/validationRules/CQ_GJ_Target_Date_lt_Initial_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>CQ_GJ_Target_Date_lt_Initial_Date</fullName>
    <active>true</active>
    <errorConditionFormula>CQ_GJ_Target_Date__c &lt;  CQ_GJ_Initiated_Date__c</errorConditionFormula>
    <errorDisplayField>CQ_GJ_Initiated_Date__c</errorDisplayField>
    <errorMessage>Sorry, initial date can not be ahead of target date</errorMessage>
</ValidationRule>