force-app/main/default/objects/CQ_GJ_SQX_Parent_Object__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CQ_GJ_Buisness_Title__c</columns>
    <columns>CQ_GJ_Parent_Query__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>